[project]
name = "fusion-poke-pixel-font"
version = "0.0.0"
requires-python = ">=3.14"

dependencies = [
    "pixel-font-builder==0.0.53",
    "pixel-font-knife==0.0.24",
    "fonttools[woff]==4.63.0",
    "pyyaml==6.0.3",
    "pillow==12.3.0",
    "httpx[http2]==0.28.1",
    "tqdm==4.68.3",
    "loguru==0.7.3",
]
